# glyphworks

./: .dockerignore  .eslintignore  .eslintrc.yml  .flake8  .gitignore  .watchmanconfig  .yarnrc  Dockerfile  LICENSE  Pipfile  README.md  babel.config.js  dev-README.md  glyphworks.sh  jest.config.js  package.json  pyproject.toml  styleguide.config.js  webpack.config.js
.github/workflows/: ci.yml  github-actions-demo.yml
.ipython/profile_default/: ipython_config.py
cypress/: .eslintrc.yml
cypress/e2e/main/: glyph_pages.cy.js  glyphs.cy.js  index.cy.js  nav.cy.js
cypress/integration/main/: index.spec.js
cypress/support/: commands.js
docker/: ci.env  default.env  docker-compose.adminer.yml  docker-compose.ci.yml  docker-compose.cypress.yml  docker-compose.dev.yml  docker-compose.mailhog.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docker/certbot/: README.md
glyphs/: admin.py  apps.py  factories.py  models.py  tests.py
glyphs/fixtures/: alphabets.yaml  glyphs.json  glyphs.yaml  legacy-glyphs.yaml  mappings.yaml  maps.yaml  replacements.yaml
glyphs/migrations/: 0001_initial.py  0002_remove_glyph_id_glyph_combining_glyph_group_and_more.py  0003_alter_glyph_options.py  0004_map_alter_glyph_ipa_definition_alter_glyph_ipa_name_and_more.py  0005_rename_map_mapping.py  0006_alter_glyph_ipa_definition_replacement_and_more.py  0007_letter_phone_phonecategory_writingsystem_and_more.py
main/: asgi.py  celery.py  models.py  schema.py  strings.js  tests.py  urls.py  views.py  wsgi.py
main/js-utils/: mapping.js  mapping.test.js
main/settings/: ci.py  dev.py  override-dist.py  prod.py  shared.py  test.py
main/themes/: FontSample.js  GlobalStyle.js  Swatch.js  ThemeProvider.js  colors.md  fonts.md  glyphworks.js  images.md  theme.md
main/urls/: dev.py  shared.py
users/: admin.py
users/migrations/: 0001_initial.py
watchfiles_reloader/: __init__.py
(+82 files in other folders)
