[tool.poetry]
name = "glyphworks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.10.7"
django-extensions = "*"
django-webpack-loader = "*"
daphne = "*"
gunicorn = "*"
flake8 = "*"
psycopg2 = "*"
factory-boy = "*"
ipython = "*"
graphene-django = "*"
django-csp = "*"
django = "4.2.1"
pyyaml = "^6.0"
cryptography = "^39.0.1"
# pyparsing = "^3.0.9"
# pydot = "^1.4.2"
pydotplus = "^2.0.2"
# graphviz = "^0.20.1"
sqlparse = "^0.4.4"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pip-audit = "*"
watchfiles = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
